--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <title>Document</title>
 </head>
 <body>
+    <section id="intro">
+        <h1>The Hoax Entertainment presents:</h1>
+        <h1>Heavenly Cortex</h1>
+    </section>
     <section>
+        <img src="https://img.itch.zone/aW1nLzMyMzM2ODgucG5n/original/IYYPby.png" alt="">
         <p>
             Недалекое будущее, человечество на Земле погрязло в беспрецедентном насилии из-за перенаселения и нищеты, бесконечные войны за ресурсы, которые находятся на грани истощения не прекращаются ни на секунду, поиски пригодных для жизни планет и их колонизация потерпели крах. Но одна научно-религиозная организация работает над проектом Эдем, по переносу человеческого сознания в искусственно созданное пространство, благодаря высоким вычислительным технологиям, оно в точности повторяет древнее священное описание Рая.
             Но чтобы получить место в раю претенденты должны пройти через настоящий Ад, таящийся в глубинах их подсознания.
@@ -19,6 +24,9 @@
             Всего в игре семь основных уровней, на каждом куча мобов и босс. Каждый босс олицетворяет один из смертных грехов - Гордость, Зависть, Чревоугодие, Блуд, Гнев, Алчность и Лень.
             Но религиозным фанатикам мало и этого, чтобы достичь Рая, человек должен победить самого себя...
         </p>
+    </section>
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, molestias.</p>
     </section>
 </body>
 </html>
