--- a/index.html
+++ b/index.html
@@ -8,25 +8,43 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <section id="intro">
+    <section id="starting-page">
         <h1>The Hoax Entertainment presents:</h1>
-        <h1>Heavenly Cortex</h1>
+        <div class="typewriter">
+            <h1 id="game-title">Heavenly Cortex</h1>
+        </div>
     </section>
     <section>
-        <img src="https://img.itch.zone/aW1nLzMyMzM2ODgucG5n/original/IYYPby.png" alt="">
+        <img src="https://i.pinimg.com/originals/62/19/33/62193363422dc819732a98427b6b1657.gif" alt="">
         <p>
             Недалекое будущее, человечество на Земле погрязло в беспрецедентном насилии из-за перенаселения и нищеты, бесконечные войны за ресурсы, которые находятся на грани истощения не прекращаются ни на секунду, поиски пригодных для жизни планет и их колонизация потерпели крах. Но одна научно-религиозная организация работает над проектом Эдем, по переносу человеческого сознания в искусственно созданное пространство, благодаря высоким вычислительным технологиям, оно в точности повторяет древнее священное описание Рая.
             Но чтобы получить место в раю претенденты должны пройти через настоящий Ад, таящийся в глубинах их подсознания.
-            Главный герой - претендент #1984. Он подписал контракт всей своей жизни и теперь ему предстоит погрузиться в пучину своего безумия, в которой обитают существа созданные по подобию его самых главных страхов.
-            Всего в игре семь основных уровней, на каждом куча мобов и босс. Каждый босс олицетворяет один из смертных грехов - Гордость, Зависть, Чревоугодие, Блуд, Гнев, Алчность и Лень.
-            Но религиозным фанатикам мало и этого, чтобы достичь Рая, человек должен победить самого себя...
+            Главный герой - претендент. Он подписал контракт всей своей жизни и теперь ему предстоит погрузиться в пучину своего безумия, в которой обитают существа созданные по подобию его самых главных страхов.
         </p>
     </section>
-    <section>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, molestias.</p>
+    <section id="game-mechanics" class="section-column">
+        <h2>Игровые механики:</h2>
+        <ul>
+            <li>2 режима атаки: дальний и ближний</li>
+            <li>Сохранение в любой момент с помощью устройства, которое по сюжету запоминает состояние мозга</li>
+            <li>Семь локаций с семью боссами и кучей мобов, ловушек и пасхальных приколов</li>
+            <li>Две концовки, зависящие от решений главного героя</li>
+            <li>Жанр: 2D платформер</li>
+            <li>Сеттинг: психоделика, фэнтези, Sci-Fi</li>
+        </ul>
+    </section>
+    <section id="crew" class="section-column">
+        <h2>Crew:</h2>
+        <ul>
+            <li>Pavlov Stanislav - team/tech lead</li>
+            <li>Limonov Vladislav - adjutant</li>
+            <li>Vinichenko Veniamin - story writing</li>
+        </ul>
     </section>
 </body>
 </html>
