--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <section id="crew" class="section-column">
         <h2>Crew:</h2>
         <ul>
-            <li>Pavlov Stanislav - team/tech lead</li>
-            <li>Limonov Vladislav - adjutant</li>
-            <li>Vinichenko Veniamin - story writing</li>
+            <li>Pavlov Stanislav - team lead / lead programmer</li>
+            <li>Vinichenko Veniamin - screenwriter / programmer</li>
+            <li>Limonov Vladislav - programmer</li>
         </ul>
     </section>
 </body>
