--- a/index.html
+++ b/index.html
@@ -17,21 +17,29 @@
 <body>
 <div id="main" class="scroll-container">
     <section id="starting-page" class="section1">
-        <h1>The Hoax Entertainment presents:</h1>
+        <h2>The Hoax Entertainment presents</h2>
         <div class="typewriter">
             <h1 id="game-title">Heavenly Cortex</h1>
         </div>
     </section>
     <section class="section2">
         <img src="https://i.pinimg.com/originals/62/19/33/62193363422dc819732a98427b6b1657.gif" alt="">
-        <p>
-            Недалекое будущее, человечество на Земле погрязло в беспрецедентном насилии из-за перенаселения и нищеты, бесконечные войны за ресурсы, которые находятся на грани истощения не прекращаются ни на секунду, поиски пригодных для жизни планет и их колонизация потерпели крах. Но одна научно-религиозная организация работает над проектом Эдем, по переносу человеческого сознания в искусственно созданное пространство, благодаря высоким вычислительным технологиям, оно в точности повторяет древнее священное описание Рая.
-            Но чтобы получить место в раю претенденты должны пройти через настоящий Ад, таящийся в глубинах их подсознания.
-            Главный герой - претендент. Он подписал контракт всей своей жизни и теперь ему предстоит погрузиться в пучину своего безумия, в которой обитают существа созданные по подобию его самых главных страхов.
-        </p>
+        <div class="story-block">
+            <h2>Story</h2>
+            <p>
+                Недалекое будущее, человечество на Земле погрязло в беспрецедентном насилии из-за перенаселения и нищеты,
+                бесконечные войны за ресурсы, которые находятся на грани истощения, не прекращаются ни на секунду, поиски
+                пригодных для жизни планет и их колонизация потерпели крах. Но одна научно-религиозная организация работает
+                над проектом Эдем, по переносу человеческого сознания в искусственно созданное пространство, благодаря высоким
+                вычислительным технологиям, оно в точности повторяет древнее священное описание Рая. Но чтобы получить место в раю
+                претенденты должны пройти через настоящий Ад, таящийся в глубинах их подсознания. Главный герой - претендент.
+                Он подписал контракт всей своей жизни, и теперь ему предстоит погрузиться в пучину своего безумия, в которой
+                обитают существа созданные по подобию его самых главных страхов.
+            </p>
+        </div>
     </section>
     <section id="game-mechanics" class="section-column section3">
-        <h2>Игровые механики:</h2>
+        <h2>Game Mechanics</h2>
         <ul>
             <li>2 режима атаки: дальний и ближний</li>
             <li>Сохранение в любой момент с помощью устройства, которое по сюжету запоминает состояние мозга</li>
@@ -42,7 +50,7 @@
         </ul>
     </section>
     <section id="crew" class="section-column section4">
-        <h2>Crew:</h2>
+        <h2>Crew</h2>
         <ul>
             <li>Pavlov Stanislav - team lead / lead programmer</li>
             <li>Vinichenko Veniamin - screenwriter / programmer</li>
